; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i2c/extr_tda998x_drv.c_tda998x_audio_shutdown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i2c/extr_tda998x_drv.c_tda998x_audio_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.tda998x_priv = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@REG_ENA_AP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i8*)* @tda998x_audio_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tda998x_audio_shutdown(%struct.device* %0, i8* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tda998x_priv*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.tda998x_priv* @dev_get_drvdata(%struct.device* %6)
  store %struct.tda998x_priv* %7, %struct.tda998x_priv** %5, align 8
  %8 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %9 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %12 = load i32, i32* @REG_ENA_AP, align 4
  %13 = call i32 @reg_write(%struct.tda998x_priv* %11, i32 %12, i32 0)
  %14 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %15 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  %17 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %18 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %17, i32 0, i32 0
  %19 = call i32 @mutex_unlock(i32* %18)
  ret void
}

declare dso_local %struct.tda998x_priv* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @reg_write(%struct.tda998x_priv*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
